--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -51,7 +51,8 @@
                 </p>
 
                 <a class="btn btn-primary" href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20"> Vai alla lista dei prodotti open-access</a>
-                </div>
+            <br>    
+            </div>
             <div class="col-lg-6 col-md-12 col-12">
                 <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">
                 <img class="img-fluid" src={{url_for('static',filename='imgs/zenodo.png')}} alt="Basso rilevo che mostra un maestro con dei discepoli.">  
@@ -70,12 +71,12 @@
                 ma anche alla letteratura prodotta dagli studiosi nei secoli.
                 </p>
                 <p>
-                Curiamo un <a href="https://www.zotero.org/groups/3759014/capitolare-univr/library">database di riferimenti bibliografici aperto</a> 
-                ed inter-operabile di riferimenti bibliografici riguardanti la Biblioteca Capitolare ed i beni contenuti al suo interno.
+                Curiamo un <a href="https://www.zotero.org/groups/3759014/capitolare-univr/library">database di riferimenti bibliografici </a> 
+                riguardante la Biblioteca Capitolare ed i beni contenuti al suo interno.
                 </p>
                 <p>
                 Il database è basato su <a href="https://it.wikipedia.org/wiki/Zotero">Zotero</a> un software open-source per gestire i 
-                riferimenti bibliografici.
+                riferimenti bibliografici aperto ed inter-operabile.
                 </p>
                 <a class="btn btn-primary" href="https://www.zotero.org/groups/3759014/capitolare-univr/library"> Consulta la bibliografia</a>
 
