--- a/templates/about.html
+++ b/templates/about.html
@@ -78,7 +78,7 @@
                     <h6>INSIEME PER SALVAGUARDARE IL PATRIMONIO</h6>
                     <h1>La convenzione</h1>
                         <p>
-                            A tale scopo l’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
+                            L’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
                             le due istituzioni. La nuova sala consultazione e il nuovo laboratorio sono stati portati a termine in tempi record, attrezzati secondo tutti gli standard di sicurezza e funzionalità richiesti dalla normativa vigente, con un collegamento internet veloce direttamente connesso alla rete e alle banche dati di Ateneo messi 
                             gratuitamente a disposizione di tutti gli utenti che si registreranno presso la sala consultazione stessa. Il progetto vede attualmente impegnati, oltre ai docenti del LaMeDan (afferenti ai due dipartimenti di Culture e Civilità e di Informatica), un tecnologo, un bibliotecario dell’Università di Verona, due assegnisti di ricerca e una dottoranda, che collaborano a vario titolo nella gestione degli strumenti del Laboratorio e del sito web, e nella descrizione dei manoscritti e dei documenti dell’archivio.
                         </p>
@@ -100,12 +100,12 @@
                     <h6>ANALIZZARE E DIGIALIZZARE I CODICI</h6>
                     <h1>Il laboratorio</h1>
                         <p>
-                        Il laboratorio di analisi dei beni librari contiene strumentazione all'avanguardia per l'analisi
+                        Il laboratorio di analisi dei beni librari è dotato di strumentazione all'avanguardia per l'analisi
                         e la digitalizzazione dei beni culturali. Gli strumenti consentono non solo di digitalizzare ad
-                        altissima risoluzione i beni della collezione, ma anche di indagarne lo stato conservativo e 
-                        la tecnica esecutiva.
-                        Di fondamentale importanza anche le analisi multispettrali che consentono spesso di rivelare
-                         testo ormai illegibile. <!-- Maggiori informazioni sugli strumenti possono essere trovate nella <a href='/strumenti'>pagina dedicata</a>. -->
+                        altissima risoluzione i beni della collezione, ma anche di indagarne lo stato conservativo e le 
+                        tecniche esecutive.
+                        Di fondamentale importanza la possibilità di effettuare analisi multispettrali, che consentono spesso di rivelare
+                        punti di testo ormai illegibili. <!-- Maggiori informazioni sugli strumenti possono essere trovate nella <a href='/strumenti'>pagina dedicata</a>. -->
                         </p>
                   </div>
                 </div>
