--- a/templates/archivio.html
+++ b/templates/archivio.html
@@ -12,7 +12,7 @@
     
     L’Archivio si suddivide in due serie: registri e pergamene. Quest’ultima, comprendente attualmente 10.249 unità, è l’oggetto della digitalizzazione che viene qui resa consultabile.
     
-    La serie delle pergamene fu oggetto di un riordino da parte di Alessandro Canobbio nel XVI secolo, che curò alcuni repertori e collocò i rotoli in due armadi, a loro volta distinti in calti (cassetti) e mazzi composti da 15 pergamene: l’antica collocazione era così identificata per armadio (A e B), numero di calto, mazzo e pergamena.
+    La serie delle pergamene fu riveduta da Alessandro Canobbio nel XVI secolo, che curò alcuni repertori e collocò i rotoli in due armadi, a loro volta distinti in calti (cassetti) e mazzi composti da 15 pergamene: l’antica collocazione era così identificata per armadio (A e B), numero di calto, mazzo e pergamena.
     
     Questo ordinamento, sconvolto in gran parte dall’alluvione dell’Adige del 1882, venne rivisto da monsignor Giuseppe Turrini negli anni Venti del secolo scorso Egli ripulì e spianò tutte le pergamene, che vennero distribuite in tre serie di cartelle, distinte per dimensione (I, II e III), e collocate al loro interno in ordine cronologico, cosicché l’attuale identificazione avviene indicando serie, cartella e foglio (recto e verso).
     
@@ -37,7 +37,7 @@
     </h2>
     
     
-    Il progetto di digitalizzazione dell’Archivio capitolare prevede la schedatura dei dati identificativi delle pergamene e dei diplomi e la loro riproduzione ad altissima risoluzione, anche con analisi multispettrale per rendere leggibili le parti dilavate o danneggiate, disponibili alla consultazione in accesso aperto. L’attuale schedatura, basata sul Codice digitale degli archivi veronesi, individua i singoli atti documentati, indicando: collocazione (fondo, serie, numero) della pergamena, data cronica (così come indicata in repertori o strumenti di consultazione o edizioni), notaio, indicazione se originale o copia ed eventuale antica collocazione, così come riportata da repertori o attergati.
+    Il progetto di digitalizzazione dell’Archivio capitolare prevede la schedatura dei dati identificativi delle pergamene e dei diplomi e la loro riproduzione ad altissima risoluzione, anche con analisi multispettrale per rendere leggibili le parti dilavate o danneggiate, disponibili alla consultazione in accesso aperto. L’attuale schedatura, basata sul <a href="http://cdavr.dtesis.univr.it/">Codice digitale degli archivi veronesi</a>, individua i singoli atti documentati, indicando: collocazione (fondo, serie, numero) della pergamena, data cronica (così come indicata in repertori o strumenti di consultazione o edizioni), notaio, indicazione se originale o copia ed eventuale antica collocazione, così come riportata da repertori o attergati.
     
     <h2>
         La ricerca e consultazione
@@ -45,6 +45,8 @@
    
     
     Il database dell’Archivio permette di ricercare per intervallo di date, per nome del notaio, collocazione attuale e antica; dalla ricerca è possibile accedere direttamente alle riproduzioni dei documenti. È altresì possibile scorrere le pergamene secondo l’ordine di collocazione, che corrisponde approssimativamente, entro le singole serie, anche a quello cronologico.
+    Il database è altresì integrato con i dati dei documenti presenti in archivi di enti del territorio veronese dei secoli VIII-XII, così come schedati nel Codice Digitale degli Archivi Veronesi.
+    Dalla maschera di ricerca è così possibile selezionare singoli archivi in cui effettuare la ricerca o estenderla al complesso di tutta la documentazione.
     
 <br>
     <p>
@@ -61,44 +63,44 @@
     Studi
 </h5>
 
-<ol>
+<ul>
     <li>
-        G. ZIVELONGHI, Strumenti e spunti di ricerca nei documenti dell’Archivio Capitolare di Verona, in Verona dalla caduta dei Carolingi al libero comune, Convegno del 24-26 maggio 1985, Atti, Verona 1987, pp. 117-176
+        G. ZIVELONGHI, <i>Strumenti e spunti di ricerca nei documenti dell’Archivio Capitolare di Verona, in Verona dalla caduta dei Carolingi al libero comune, Convegno del 24-26 maggio 1985</i>, Atti, Verona 1987, pp. 117-176
     </li>
     <li>
-        A. CASTAGNETTI, Il capitolo della cattedrale: note di storia politica e sociale, in Le carte del capitolo della cattedrale di Verona. I. (1101-1151), a cura di E. Lanza, Roma 1998, pp. V-LIX
+        A. CASTAGNETTI, <i>Il capitolo della cattedrale: note di storia politica e sociale, in Le carte del capitolo della cattedrale di Verona. I. (1101-1151)</i>, a cura di E. Lanza, Roma 1998, pp. V-LIX
     </li>
     <li>
-        G.M. VARANINI, Note sull’archivio del capitolo della cattedrale di Verona fra XII e XIII secolo, in Le carte del capitolo della cattedrale di Verona. II. (1152-1183), a cura di E. Lanza, Roma 2006, pp. XI-LXV
+        G.M. VARANINI, <i>Note sull’archivio del capitolo della cattedrale di Verona fra XII e XIII secolo, in Le carte del capitolo della cattedrale di Verona. II. (1152-1183)</i>, a cura di E. Lanza, Roma 2006, pp. XI-LXV
     </li>
 
-</ol>
+</ul>
 
 
 <h5>
     Edizioni di documenti
 </h5>
-<ol>
+<ul>
     <li>
-        Codice diplomatico veronese dalla caduta dell’Impero romano alla fine del periodo carolingio, a cura di V. Fainelli, Venezia 1940
+        <i>Codice diplomatico veronese dalla caduta dell’Impero romano alla fine del periodo carolingio</i>, a cura di V. Fainelli, Venezia 1940
 
     </li>
     <li>
-        Codice diplomatico veronese del periodo dei re d’Italia, a cura di V. Fainelli, Venezia 1963
+        <i>Codice diplomatico veronese del periodo dei re d’Italia,</i> a cura di V. Fainelli, Venezia 1963
     </li>
     <li>
-        Le Carte del capitolo della cattedrale di Verona. I. (1101-1151), a cura di E. Lanza, Roma 1998 [Fonti per la storia della Terraferma veneta, 13]
+        <i>Le Carte del capitolo della cattedrale di Verona. I. (1101-1151)</i>, a cura di E. Lanza, Roma 1998 [Fonti per la Storia della Terraferma veneta, 13]
     </li>
     <li>
-        Le Carte del capitolo della cattedrale di Verona. II. (1152-1183), a cura di E. Lanza, Roma 2006 [Fonti per la storia della Terraferma Veneta, 22].
+        <i>Le Carte del capitolo della cattedrale di Verona. II. (1152-1183)</i>, a cura di E. Lanza, Roma 2006 [Fonti per la Storia della Terraferma Veneta, 22]
     </li>
     <li>
-        Chartae Latinae Antiquiores. Facsimile edition of the latin charters, 2nd series, Ninth century, edited by G. Cavallo, G. Nicolaj, LIX, Italy XXXI. Verona I, published by F. Santoni, Dietikon-Zurich 2001,
+        <i>Chartae Latinae Antiquiores. Facsimile edition of the latin charters</i>, 2nd series, Ninth century, edited by G. Cavallo, G. Nicolaj, LIX, Italy XXXI. Verona I, published by F. Santoni, Dietikon-Zurich 2001
     </li>
     <li>
-        Chartae Latinae Antiquiores. Facsimile edition of the latin charters, 2nd series, Ninth century, edited by G. Cavallo, G. Nicolaj, LX, Italy XXXII. Verona II, publisched by F. Santoni, Dietikon-Zurich 200
+        <i>Chartae Latinae Antiquiores. Facsimile edition of the latin charters</i>, 2nd series, Ninth century, edited by G. Cavallo, G. Nicolaj, LX, Italy XXXII. Verona II, publisched by F. Santoni, Dietikon-Zurich 200
     </li>
-</ol>
+</ul>
 </div>
 
 {% endblock  %}
