--- a/templates/exploreapp.html
+++ b/templates/exploreapp.html
@@ -3,7 +3,7 @@
 <br>
 <br>
 <div class="container bg-white" id="content">
-<h4>Ricerca basata sui dati del Catalogo di don Spagnolo.</h1>
+<h4>Ricerca basata sui dati del Catalogo di Antonio Spagnolo.</h1>
 
 <p>
 Questa applicazione permette di esplorare il contenuto della biblioteca Capitolare sulla base dei dati del <a href="esplora">catalogo storico di don Spagnolo</a> e di alcuni supplementi.
@@ -19,8 +19,7 @@ delle carte:
 </p>
 Il colore grigio indica invece, che il campo non è disponibile.
 <p style="font-size:0.9vw">
-<i >L'applicazione e basata su <a href="https://bokeh.org/">Bokeh</a> integrando i dati contenuti nel "I manoscritti della Biblioteca Capitolare di Verona :
-    catalogo descrittivo redatto da Antonio Spagnolo a cura di Silvia Marchi".</i>
+<i >L'applicazione e basata su <a href="https://bokeh.org/">Bokeh</a></i>
 </p>
 <script id="1000">
   var xhr = new XMLHttpRequest()
