--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -8,7 +8,7 @@
         <div class="row">
         	<div class="col-md-3 footer-brand animated fadeInLeft">
                 <h2>Capitolar-<b>e</b></h2>
-                <p class="bd-lead">Il portale Capitolar-<b>e</b> è curato e mantenuto dall laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>, parte
+                <p class="bd-lead">Il portale capitolar-<b>e</b> è curato e mantenuto dall laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>, parte
                     dei <a href=https://sites.hss.univr.it/laboratori_integrati/>laboratori integrati</a> dell'Università di Verona.
                     Non esitare a contattarci per ulteriori informazioni.
                     </p>
