--- a/templates/index2.html
+++ b/templates/index2.html
@@ -18,8 +18,8 @@ window.onload = function(){
       <h1>IL PROGETTO</h1>
       <h2>Insieme per proteggere, digitalizzare e valorizzare</h2>
       <p>
-        Il sito Capitolar-e è frutto di un progetto di ricerca interdisciplinare nato dalla collaborazione 
-        tra i Dipartimenti di <a href=https://www.dcuci.univr.it/>Culture e Civiltà</a> e di <a href=https://www.di.univr.it/>Informatica</a> insieme al <a href=https://www.univr.it/it/organizzazione/sistema-bibliotecario-di-ateneo/>Sistema Bibliotecario di Ateneo</a> dell’Università di Verona.
+        Il sito capitolar-e è frutto di un progetto di ricerca interdisciplinare nato dalla collaborazione 
+        tra i dipartimenti di <a href=https://www.dcuci.univr.it/>Culture e Civiltà</a> e di <a href=https://www.di.univr.it/>Informatica</a> insieme al <a href=https://www.univr.it/it/organizzazione/sistema-bibliotecario-di-ateneo/>Sistema Bibliotecario di Ateneo</a> dell’Università di Verona.
         Il progetto ha preso avvio grazie a un consistente finanziamento dell’ateneo 
         veronese ed è stato reso possibile grazie a una convenzione stipulata con 
         la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Biblioteca Capitolare di Verona</a>. Attualmente vede impegnati docenti di 
@@ -73,15 +73,15 @@ window.onload = function(){
          campagne di riproduzione.
         <br>
         <h5><a href="/esplora">Catalogo storico </a></h5>
-        Il catalogo storico metta a disposizione i principali dati identificativi dei 
-        manoscritti della Capitolare, così come erano stati descritti da Antonio Spagnolo 
+        Il catalogo storico mette a disposizione i principali dati identificativi dei 
+        manoscritti della Biblioteca Capitolare, così come erano stati descritti da Antonio Spagnolo 
         alla fine del XIX secolo, collegandoli alle loro riproduzioni digitali. Il catalogo
         storico di Spagnolo, assieme alle sue prosecuzioni, è uno strumento che risulta 
         tutt’oggi indispensabile per l’identificazione dei codici.
         <br>
         <h5><a href="/archivio"> Archivio </a> </h5>
         La digitalizzazione dell’archivio del Capitolo del canonici, basato per ora sulle 
-        schede del Codice digitale degli archivi veronesi, permette di ricercare e 
+        schede del <a href="http://cdavr.dtesis.univr.it/">Codice digitale degli archivi veronesi</a>, permette di ricercare e 
         visualizzare i documenti qui conservati, risalenti per le pergamene più antiche
         all’VIII secolo. Il progetto prevede di estendere questa sezione anche ad altri
         fondi conservati nella Biblioteca Capitolare, tra cui l’archivio dello storico
@@ -105,7 +105,7 @@ window.onload = function(){
       <h1>Alta formazione e prodotti della ricerca</h1>
       <p>
         Il progetto dissemina i risultati  e le conoscenze acquisite attraverso diverse modalità per 
-        raggiungere gli studiosi ed il grande pubblico. 
+        raggiungere gli studiosi ma intende altresì rivolgersi al grande pubblico. 
       </p>
       Consulta le varie sezioni per ottenere maggiori informazioni su:
     <div class="list-group">
