--- a/templates/media.html
+++ b/templates/media.html
@@ -40,12 +40,8 @@
                 <h6>SERVIZIO TELEVISIVO</h6>
                 <h1>Tg2 e Tg2 Dossier</h1>
                 <p>
-                    Il progetto è stato parte anche di una puntata del Tg2 Dossier dedicata a Dante.
-
-                </p>
-                <p>
-                    Il Tg2 ha inoltre dedicato l'intero trailer al progetto scaligero, che ha quindi
-                    raggiunto più di due milioni e mezzo di spettatori.
+                    Il progetto è stato illustrato una puntata del Tg2 Dossier dedicata a Dante;
+                    il Tg2 ha inoltre dedicato l'intero trailer al LaMeDan, raggiungendo più di due milioni e mezzo di spettatori.
                 </p>
                 <p>
                     <a class="embedly-card" data-card-image="0" href="http://www.tg2.rai.it/dl/RaiTV/programmi/media/ContentItem-73afded6-5bd7-4984-b232-19e4f4255be9-tg2.html">TG2 20:30 servizio n. 13 del giorno 20/03/2021</a><script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
@@ -63,8 +59,7 @@
                   <div class="text col-lg-6 col-md-12 col-12">
                     <h6>SERVIZIO TELEVISIVO</h6>
                     <h1>TG3 Regione Veneto e Rai News</h1>
-                    <p>L'inizio del primo progetto pilota nel 2018, ha raccolto l'interesse della stampa
-                        che ha dedicato un servizio andato in onda sul <a href=https://www.rainews.it/dl/rainews/TGR/media/ven-Verona-Biblioteca-Capitolare-manoscritti-b368a937-a75d-42a3-89b9-3af5bfaf69af.html>TgR Veneto</a>.
+                    <p>Il progetto DascaBiDa, all'origine del LaMeDan, nel 2018, ha raccolto l'interesse della stampa come dimostra questo servizio andato in onda sul <a href=https://www.rainews.it/dl/rainews/TGR/media/ven-Verona-Biblioteca-Capitolare-manoscritti-b368a937-a75d-42a3-89b9-3af5bfaf69af.html>TgR Veneto</a>.
                     </p>
                   </div>
                   <div class="img col-lg-6 col-md-12 col-12">
