--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -15,10 +15,8 @@
             <br>
             <h1>Prodotti della ricerca</h1>
             <p>
-                Puntiamo a produrre ricerche di qualità consultabili dagli studiosi nazionali ed 
-                internazionali.
-                Quando possibile rilasciamo i nostri risultati in open-access sfruttando
-                gli standard internazionali per permettere l'accessibilità ed il riutilizzo
+                Il LaMeDan punta a produrre ricerche di qualità, consultabili dagli studiosi, rilasciandone quando possibile i risultati in open-access sfruttando
+                gli standard internazionali che ne permettono l'accessibilità e il riutilizzo
                 dei contenuti.
 
             </p>
@@ -40,10 +38,10 @@
                 <h6>ZENODO COMMUNITY</h6>
                 <h1>Prodotti open-access</h1>
                 <p>
-                    Molti dei nostri prodotti di ricerca sono ospitati su <a href="https://about.zenodo.org/">Zenodo</a>. 
+                    Alcuni dei prodotti di ricerca del LaMeDan sono ospitati su <a href="https://about.zenodo.org/">Zenodo</a>. 
                 </p>
                 <p>
-                    La nostra <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">community di Zenodo</a> offre l'accesso ed il download 
+                    La nostra <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">community di Zenodo</a> offre l'accesso e il download 
                     di diversi contenuti open-access facilmente citabili dagli utilizzatori finali.
                 </p>
                 <p>
@@ -72,10 +70,10 @@
                 </p>
                 <p>
                 Curiamo un <a href="https://www.zotero.org/groups/3759014/capitolare-univr/library">database di riferimenti bibliografici </a> 
-                riguardante la Biblioteca Capitolare ed i beni contenuti al suo interno.
+                riguardante la Biblioteca Capitolare e i suoi beni.
                 </p>
                 <p>
-                Il database è basato su <a href="https://it.wikipedia.org/wiki/Zotero">Zotero</a> un software open-source per gestire i 
+                Il database è basato su <a href="https://it.wikipedia.org/wiki/Zotero">Zotero</a>, un software open-source per gestire i 
                 riferimenti bibliografici aperto ed inter-operabile.
                 </p>
                 <a class="btn btn-primary" href="https://www.zotero.org/groups/3759014/capitolare-univr/library"> Consulta la bibliografia</a>
