--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -19,12 +19,12 @@
             Iniziative per la formazione degli studiosi
             </blockquote>
             <p>
-              Il laboratorio è attivo nella formazione e degli studiosi organizzando
-              e promuovendo iniziative nazionali ed internazionali.
+              Il LaMeDan è attivo nella formazione e degli studiosi, organizzando
+              e promuovendo iniziative nazionali e internazionali.
             </p>
             <p>
               Queste iniziative comprendono: <i>Verona International Summer School in Medieval Manuscripts</i>
-              nelle sue due edizione 2019 e 2020 e la Scuola estiva internazionale in studi danteschi tenutasi
+              nelle sue due edizione 2019 e 2020 e la <i>Scuola estiva internazionale in Studi danteschi </i>tenutasi
               nel 2019 e nel 2020. 
             </p>
             <p>
@@ -45,8 +45,8 @@
                     <h6>SUMMER SCHOOL</h6>
                     <h1>Verona International Summer School in Medieval Manuscripts</h1>
                     Nel 2019 e nel 2020 si sono svolte le prime due edizioni di una scuola estiva a vocazione principalmente 
-                    internazionale dedicata ai manoscritti tardoantichi e medievali (415-1500) conservati presso l
-                    a Biblioteca Capitolare di Verona. I corsi, alternando lezioni teoriche a esercitazioni pratiche 
+                    internazionale dedicata ai manoscritti tardoantichi e medievali (415-1500) conservati presso 
+                    la Biblioteca Capitolare di Verona. I corsi, alternando lezioni teoriche a esercitazioni pratiche 
                     (<i>hands-on labs</i>), hanno offerto a giovani studiosi in formazione (scelti tra storici, paleografi, 
                     filologi, archeologi e storici dell’arte) una irripetibile occasione per approfondire le proprie 
                     conoscenze direttamente sui materiali di una delle più antiche e meglio conservate biblioteche del 
@@ -74,7 +74,7 @@
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
                     <h6>SUMMER SCHOOL</h6>
-                    <h1>Scuola estiva internazionale in studi danteschi </h1>
+                    <h1>Scuola estiva internazionale in Studi danteschi </h1>
                     <p>
                         La <a href=https://www.univrmagazine.it/2020/07/03/torna-la-scuola-estiva-internazionale-in-studi-danteschi/>Scuola estiva internazionale in Studi danteschi </a>propone agli 
                         iscritti una settimana residenziale di corsi, seminari e conferenze,
@@ -126,7 +126,7 @@
                         <p>
                             Sia i docenti coinvolti, sia quelli che compongono il comitato scientifico del Master
                             afferiscono al Laboratorio di Studi Medievali e Danteschi, incardinato nel 
-                            Dipartimento di Culture e civiltà. Questo laboratorio è la cellula in cui si sviluppa
+                            Dipartimento di Culture e Civiltà. Questo laboratorio è la cellula in cui si sviluppa
                             il progetto di catalogazione scientifica, digitalizzazione e indagine diagnostica a carico 
                             dei beni librari e archivistici conservati dalla Biblioteca Capitolare di Verona.
                             Questa circostanza garantisce la più stretta circolarità tra il momento della ricerca
