Aggiunto orchid, modificata impostazione

--- a/templates/about.html
+++ b/templates/about.html
@@ -105,7 +105,7 @@
                         altissima risoluzione i beni della collezione, ma anche di indagarne lo stato conservativo e le 
                         tecniche esecutive.
                         Di fondamentale importanza la possibilità di effettuare analisi multispettrali, che consentono spesso di rivelare
-                        punti di testo ormai illegibili. <!-- Maggiori informazioni sugli strumenti possono essere trovate nella <a href='/strumenti'>pagina dedicata</a>. -->
+                        punti di testo ormai illeggibili. <!-- Maggiori informazioni sugli strumenti possono essere trovate nella <a href='/strumenti'>pagina dedicata</a>. -->
                         </p>
                   </div>
                 </div>
