--- a/templates/exploreapp.html
+++ b/templates/exploreapp.html
@@ -6,7 +6,7 @@
 <h4>Ricerca basata sui dati del Catalogo di Antonio Spagnolo.</h1>
 
 <p>
-Questa applicazione permette di esplorare il contenuto della biblioteca Capitolare sulla base dei dati del <a href="esplora">catalogo storico di don Spagnolo</a> e di alcuni supplementi.
+Questa applicazione permette di esplorare il contenuto della Biblioteca Capitolare sulla base dei dati del <a href="esplora">catalogo storico di don Spagnolo</a> e dei suoi supplementi.
 La grandezza relativa del cerchio rappresenta il numero dei fogli contenuti nel bene. Il colore del cerchio indica il materiale
 delle carte: 
  <span style="color: #7f7fff">●</span>membranaceo,
