--- a/templates/index2.html
+++ b/templates/index2.html
@@ -157,7 +157,7 @@ window.onload = function(){
       </p>
     </div>
     <div class="img col-lg-6 col-md-12 col-12">
-      <img class="img-fluid" src={{url_for('static',filename='imgs/tutorial.gif')}} alt="Gif che mostra come ricercare un codice conoscendo la segnatura.">   
+      <img class="img-fluid" src={{url_for('static',filename='imgs/tutorial2.gif')}} alt="Gif che mostra come ricercare un codice conoscendo la segnatura.">   
     </div>
   </div>
 </section>
