--- a/templates/progetti.html
+++ b/templates/progetti.html
@@ -28,7 +28,7 @@
     <h3>DascabiDa</h3>
     <h6>Dallo scriptorium carolingio alla biblioteca di Dante</h6>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="bd-example">
         <p class="text-justify"> Il progetto DascabiDa ha dato vità al laboratorio LaMeDan ed alla convenzione tra la Fondazione Biblioteca Capitolare di Veorna
             e l'Università di Verona. In coincidenza con gli anniversari danteschi (2015 e 2021) della nascita e della morte del poeta, il progetto si prefigge di studiare e digitalizzare
