--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,28 @@
         <section id="scopo" class="bg-white">
             <br>
             <h1>Scopo del portale Capitolar-e</h1><p>
-            Il progetto nasce dalla collaborazione tra gruppi di ricerca afferenti ai Dipartimenti di Culture e Civiltà e di Informatica dell’Università di Verona, il Sistema Bibliotecario di Ateneo e la Biblioteca Capitolare di Verona. L’insieme di queste competenze ha consentito di realizzare un portale il cui obiettivo primario corre lungo un duplice binario: a) catalogazione e digitalizzazione; b) diagnostica. Lo scopo del punto a) è mettere a disposizione di studiosi e ricercatori, in modalità open access, manoscritti e documenti della Biblioteca capitolare di Verona. Per far questo il progetto si articola su tre sezioni principali: 1) Catalogo digitale dei manoscritti, che offre sia le descrizioni dei codici realizzate secondo i più moderni standard di internazionali sia le immagini digitalizzate in HD degli stessi; 2) Inventario delle pergamene dell’Archivio capitolare complete di scheda descrittiva e di immagini digitalizzate; 3) Catalogo storico dei manoscritti condotto sulla base del vecchio catalogo a schede di don Antonio Spagnolo (vd. <a href="/esplora">sezione dedicata</a>) e collegato alle immagini dei manoscritti indicizzati. Obiettivo del punto b) è l’esami diagnosticio di codici e pergamene per verificarne lo stato di conservazione e per compiere il rilievo e la elaborazione di immagini di manufatti danneggiati e illeggibili. Ciò consentirà il recupero di materiali di straordinario valore sia per quanto attiene alla tradizione testuale di alcuni testi capitali per la cultura occidentale, sia per quanto riguarda documenti cruciali per la storia dell’istituzione. Sono inoltre previste una sezione 4) dedicata ai prodotti della ricerca, ossia alle pubblicazioni realizzate su diversi supporti e in diversi formati che costituiscono il frutto tangibile dell’attività del progetto; una sezione 5) che ospita i contributi alla divulgazione pubblicati sia in formato audio-video, attraverso filmati e interviste radio-televisive, sia attraverso gli organi della carta stampata.
+            Il progetto nasce dalla collaborazione tra gruppi di ricerca afferenti ai Dipartimenti di Culture e Civiltà 
+            e di Informatica dell’Università di Verona, il Sistema Bibliotecario di Ateneo e la Biblioteca 
+            Capitolare di Verona. L’insieme di queste competenze ha consentito di realizzare un portale 
+            il cui obiettivo primario corre lungo un duplice binario: a) catalogazione e digitalizzazione; b)
+            diagnostica. Lo scopo del punto a) è mettere a disposizione di studiosi e ricercatori, in modalità
+            open access, manoscritti e documenti della Biblioteca capitolare di Verona.
+            Per far questo il progetto si articola su tre sezioni principali: 
+             <a href="/ricerca">1) Catalogo digitale dei manoscritti </a>, che offre sia le descrizioni dei codici 
+            realizzate secondo i più moderni standard di internazionali sia le immagini digitalizzate in HD
+            degli stessi;  <a href="/archivio">2) Inventario delle pergamene dell’Archivio capitolare</a> complete di scheda
+            descrittiva e di immagini digitalizzate; <a href="/esplora">3) Catalogo storico dei manoscritti</a> condotto sulla base
+            del vecchio catalogo a schede di don Antonio Spagnolo 
+            e collegato alle immagini dei manoscritti indicizzati. Obiettivo del punto b) è l’esami diagnosticio
+            di codici e pergamene per verificarne lo stato di conservazione e per compiere il rilievo e la 
+            elaborazione di immagini di manufatti danneggiati e illeggibili. Ciò consentirà il recupero di 
+            materiali di straordinario valore sia per quanto attiene alla tradizione testuale di alcuni testi 
+            capitali per la cultura occidentale, sia per quanto riguarda documenti cruciali per la storia 
+            dell’istituzione. Sono inoltre previste una sezione 4) dedicata ai prodotti della ricerca, 
+            ossia alle pubblicazioni realizzate su diversi supporti e in diversi formati che costituiscono il 
+            frutto tangibile dell’attività del progetto; una sezione 5) che ospita i contributi alla 
+            divulgazione pubblicati sia in formato audio-video, attraverso filmati e interviste radio-televisive,
+            sia attraverso gli organi della carta stampata.
             </p>
             <!-- <p>
             Per avere informazioni più dettagliate per la visita della Biblioteca Capitolare e del museo diocesano,
@@ -49,7 +70,7 @@
               </div>
             <div class="img col-lg-6 col-md-12 col-12">
                 <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" title="YouTube video player intervista Prof. Pellegrini sul progetto Dascabida." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube-nocookie.com/embed/q8U-DiZHVUg?start=44" title="YouTube video player intervista Prof. Pellegrini sul progetto Dascabida." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 </div>
             </div>
@@ -85,7 +106,7 @@
                 </div>
                 <div class="img col-lg-6 col-md-12 col-12">
                     <div class="embed-responsive embed-responsive-4by3">
-                        <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube.com/embed/eKSemEt2PNk" title="YouTube video player con video intervista Prof. Sartor sulla convenzione. " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube-nocookie.com/embed/eKSemEt2PNk" title="YouTube video player con video intervista Prof. Sartor sulla convenzione. " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
