--- a/templates/media.html
+++ b/templates/media.html
@@ -43,9 +43,7 @@
                     Il progetto è stato illustrato una puntata del Tg2 Dossier dedicata a Dante;
                     il Tg2 ha inoltre dedicato l'intero trailer al LaMeDan, raggiungendo più di due milioni e mezzo di spettatori.
                 </p>
-                <p>
-                    <a class="embedly-card" data-card-image="0" href="http://www.tg2.rai.it/dl/RaiTV/programmi/media/ContentItem-73afded6-5bd7-4984-b232-19e4f4255be9-tg2.html">TG2 20:30 servizio n. 13 del giorno 20/03/2021</a><script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-                </p>
+                 <a href="http://www.tg2.rai.it/dl/RaiTV/programmi/media/ContentItem-73afded6-5bd7-4984-b232-19e4f4255be9-tg2.html" target="_blank">Vedi il servizio sul sito del Tg2.</a>
                 </div>
             <div class="col-lg-6 col-md-12 col-12">
                 <img class="img-fluid" src={{url_for('static',filename='imgs/TG2.jpeg')}} alt="Immagine estratta dal servizio del TG2, durante l'intervista del prof. Pellegrini.">  
@@ -79,7 +77,7 @@
                 </div>
             <div class="col-lg-6 col-md-12 col-12">
                 <div class="embed-responsive embed-responsive-4by3">
-                <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/Wkd58xpwdoQ" title="YouTube video player servizio di TelePace sul progetto." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube-nocookie.com/embed/Wkd58xpwdoQ" title="YouTube video player servizio di TelePace sul progetto." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 </div>
             </div>
