--- a/templates/media2.html
+++ b/templates/media2.html
@@ -36,7 +36,7 @@
               </div>
               <div class="col-lg-6 col-md-12 col-12">
               <div class="embed-responsive embed-responsive-4by3">
-                <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/Wkd58xpwdoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube-nocookie.com/embed/Wkd58xpwdoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               </div>
             </div>
