--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -24,7 +24,7 @@
             Applicativi 
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/exploreapp">Catalogo storico A. Spangolo</a></li>
+            <li><a class="dropdown-item" href="/exploreapp">Catalogo storico A. Spagnolo</a></li>
             <li><a class="dropdown-item" href="/archivioapp">Archivio delle pergamene</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/ricerca">Ricerca nuovo catalogo</a></li>
